# CPP_Advanced

CPP20/: demo_concepts.h  demo_designated_initializers.h  demo_format.h  demo_lambdas.h  demo_ranges.h  demo_source_location.h  demo_spaceship.h  main.cpp
CPP20/Format/: main.cpp
CPP20/RangesViews/: main.cpp
CPPCheck/: main.cpp
DesignPatterns/COR1/: ChainOfResponsability.cpp  approver.h  purchase.h
DesignPatterns/COR2/: ChainOfResponsability2.cpp  logger.h
DesignPatterns/Decorator/: CMakeCache.txt  CMakeLists.txt  decorator_coffee.cpp  decorator_shape.cpp
DesignPatterns/Facade/: generator.cpp
DesignPatterns/Factory/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Point2D.h  Wall.h  main.cpp
DesignPatterns/Observer/: CMakeCache.txt  CMakeLists.txt  observer.cpp  observer_person.cpp
DesignPatterns/Singleton/: CMakePresets.json  database.h  main.cpp
DesignPatterns/State/: CMakeLists.txt  context.h  main.cpp  state.cpp  state.h
DesignPatterns/StateGarage/: CMakeCache.txt  garage.h  main.cpp  state.cpp  state.h
DesignPatterns/StrategyDynamic/: CMakeLists.txt  TextProcessor.h  list.h  main.cpp
Exercises/: CMakeLists.txt  CMakePresets.json  readings.cpp
MultiThreading/: Barrier.cpp  CMakeLists.txt  CircularBuffer.h  CooperativeCancelation.cpp  Latch.cpp  SharedBufferTest1.cpp  SharedBufferTest2.cpp  SharedBufferTest3.cpp  SharedBuffer_semaphoreTest.cpp  SynchronizedBuffer.h  SynchronizedBuffer_semaphore.h  UnsynchronizedBuffer.h  async.cpp  atomic.cpp  fig17_01.cpp  fig17_02.cpp  printtask.cpp  printtask.h  printtask17.cpp
(+19 files in other folders)
